--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         background: #000 no-repeat center center;
         background-size: contain;
       }
+
+      .media--preloader {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background: #000 no-repeat center center;
+        background-size: contain;
+        z-index: -1;
+      }      
     </style>
 
   </head>
@@ -28,13 +37,17 @@
     <!-- site-canvas -->
     <div class="site-canvas">
       <div id="the-image" class="media"></div>
+
+      <div id="the-preloader" class="media media--preloader"></div>
     </div>
     <!--/ site-canvas -->
     <script>
-      var imgTime = 8000;
+      var imgTime = 12000;
 
       var theImage = document.querySelector('#the-image');
+      var thePrealoder = document.querySelector('#the-preloader');
       var lastImg = null;
+
       setInterval(function () {
         var uuid = lastImg ? lastImg.uuid : 'no';
         fetch('https://giffer-lusitano.herokuapp.com/gif/' + uuid)
@@ -44,6 +57,18 @@
             console.log('json', json);
             lastImg = json;
             theImage.style.backgroundImage = "url(" + json.url + ")";
+
+            var nextImg = lastImg.uuid;
+
+            fetch('https://giffer-lusitano.herokuapp.com/gif/' + nextImg)
+              .then(function(response) {
+                return response.json()
+              }).then(function(json) {
+                console.log('json', json);
+                thePrealoder.style.backgroundImage = "url(" + json.url + ")";
+              }).catch(function(ex) {
+                console.log('parsing failed', ex)
+              })
           }).catch(function(ex) {
             console.log('parsing failed', ex)
           })
