--- a/upload.html
+++ b/upload.html
@@ -30,7 +30,7 @@
 
         if (!url) return;
 
-        fetch('https://giffer-lusitano.herokuapp.com/gif?token=' + pwd, {
+        fetch('https://giffer-projector.herokuapp.com/gif?token=' + pwd, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
