--- a/all.html
+++ b/all.html
@@ -6,44 +6,7 @@
     <meta name="google-site-verification" content="ilalb0jZKO_byQAVbT-l4p7ivwqYNEbHAdryZd5jfP0" />
     <title>Giffer - manage</title>
 
-    <style>
-    .site-canvas > div {
-      float: left;
-      width: 10%;
-    }
-
-    .site-canvas > div > div {
-      padding-bottom: 100%;
-      height: 0;
-      overflow: hidden;
-      position: relative;
-      box-sizing: border-box;
-      border: 1px solid #fff;
-      background: #333;
-    }
-
-    .site-canvas > div > div img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: auto;
-    }
-
-    .site-canvas > div > div a {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: red;
-      color: #fff;
-      text-transform: uppercase;
-      font-size: 10px;
-      padding: 4px 8px;
-      text-decoration: none;
-      font-family: Arial;
-    }
-    </style>
+    
   </head>
 
   <body>
@@ -58,14 +21,12 @@
 
       function render () {
         container.innerHTML = '';
-        fetch('https://giffer-lusitano.herokuapp.com/gifs?t=' + Date.now())
+        fetch('https://giffer-projector.herokuapp.com/gifs?t=' + Date.now())
           .then(function(response) {
             return response.json()
           }).then(function(json) {
-            console.log(json.length);
             json.forEach(function (o) {
               var wrapper = document.createElement('div');
-              var wrapperInner = document.createElement('div');
               var img = document.createElement('img');
               img.setAttribute('src', o.url);
 
@@ -74,7 +35,7 @@
                 e.preventDefault();
                 var pwd = document.querySelector('#input-pwd').value;
 
-                fetch('https://giffer-lusitano.herokuapp.com/gif/' + o.uuid + '?token=' + pwd, {
+                fetch('https://giffer-projector.herokuapp.com/gif/' + o.uuid + '?token=' + pwd, {
                   method: 'DELETE'
                 }).then(function () {
                   render ()
@@ -84,9 +45,8 @@
               link.setAttribute('href', '#');
               link.innerHTML = 'delete';
 
-              wrapperInner.appendChild(img);
-              wrapperInner.appendChild(link);
-              wrapper.appendChild(wrapperInner);
+              wrapper.appendChild(img);
+              wrapper.appendChild(link);
               container.appendChild(wrapper);
             });
           })
