Make it vertically scrollable
Because projector on Android.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         padding: 0;
       }
 
+      .site-canvas {
+        width: 100%;
+        height: 150vh;
+      }
+
       .media {
-        position: absolute;
+        position: fixed;
         height: 100%;
         width: 100%;
         background: #000 no-repeat center center;
@@ -21,7 +26,7 @@
       }
 
       .media--preloader {
-        position: absolute;
+        position: fixed;
         height: 100%;
         width: 100%;
         background: #000 no-repeat center center;
